--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 	</script>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>maszyna losujaca tv gry</title>
-	<meta name="description" content="legendarna maszyna losujaca teraz dostepna w przegladarce. wylosuj swoj temat, udostępnij go znajomym, redakcji TVGRY, wykorzystaj go jako temat na swoj filmik lub po prostu nic z nim nie rob (najlepiej).">
-	<meta name="keywords" content="HTML,CSS,XML,JavaScript,Klocuch,klo,cuch,tvgry,losu,losowanko,dzyn,maszyna,szef,hed,jordan,gierki,recenzje,gry,wideorecenzje,video,games,pc,tematy,filmiki">
+    <title>Generator Norwegów</title>
+	<meta name="description" content="Wyciekła tajna maszyna trenera Alexandra Stoeckla. Teraz sam stwórz norweskiego skoczka, który niedługo wyskoczy na światowy poziom!">
+	<meta name="keywords" content="HTML,CSS,XML,JavaScript,generator,norwegów,Stoeckl,skijumpingfamily,skokawka">
 	<meta name="author" content="xar">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="manifest" href="site.webmanifest">
@@ -26,9 +26,9 @@
 	<meta property="og:url" content="https://losulosu.pl/" />
 	<meta property="og:image" content="https://losulosu.pl/icon.png" />
 	<meta property="og:description" content="losowanko zapraszam dzyn dzyn dzyn" />
-	<meta name="theme-color" content="#A80000">
-	<meta name="msapplication-navbutton-color" content="#A80000">
-	<meta name="apple-mobile-web-app-status-bar-style" content="#A80000">
+	<meta name="theme-color" content="#E883D5">
+	<meta name="msapplication-navbutton-color" content="#E883D5">
+	<meta name="apple-mobile-web-app-status-bar-style" content="#E883D5">
     <link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/main.css">
@@ -40,7 +40,7 @@
 	<div class="row">
 			<div class="wrapper" id="machine">
 			<div id="screen">
-			<p class="header">losowanie</p>
+			<p class="header">generator</p>
 			<div class="row">
 			<div class="one-third column box"><div id="b1"></div></div>
 			<div class="one-third column box"><div id="b2"></div></div>
@@ -49,7 +49,7 @@
 			<p id="ryjce">temacik dla: <img height='100px' src='img/kto.png' class='shadowed'/></p>
 			</div>
 			<div class="row">
-			<button type="button" onclick="losu_start()">losuj</button>
+			<button type="button" onclick="losu_start()">generuj</button>
 				</div>
 				<div class="row">
 				<div class="progressbar six columns" id="myProgress1">
