--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<div class="row">
 			<div class="wrapper" id="machine">
 			<div id="screen">
-			<p class="header">generator</p>
+			<p class="header">generator norwegów</p>
 			<div class="row">
 			<div class="one-third column box"><div id="b1"></div></div>
 			<div class="one-third column box"><div id="b2"></div></div>
