--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 	</script>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>maszyna losujaca tv gry</title>
-	<meta name="description" content="legendarna maszyna losujaca teraz dostepna w przegladarce. wylosuj swoj temat, udostępnij go znajomym, redakcji TVGRY, wykorzystaj go jako temat na swoj filmik lub po prostu nic z nim nie rob (najlepiej).">
-	<meta name="keywords" content="HTML,CSS,XML,JavaScript,Klocuch,klo,cuch,tvgry,losu,losowanko,dzyn,maszyna,szef,hed,jordan,gierki,recenzje,gry,wideorecenzje,video,games,pc,tematy,filmiki">
+    <title>generator norwegow</title>
+	<meta name="description" content="Legendarny Generator Norwegów trenera Alexandra Stoeckla ujrzał światło dzienne! Teraz i ty możesz stworzyć Norwega, który znikąd wskoczy do czołowej trzydziestki zawodów Pucharu Świata">
+	<meta name="keywords" content="HTML,CSS,XML,JavaScript,generator,norwegow,skijumping,skijumpingfamily">
 	<meta name="author" content="xar">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="manifest" href="site.webmanifest">
@@ -46,10 +46,7 @@
 			<div class="one-third column box"><div id="b2"></div></div>
 			<div class="one-third column box"><div id="b3"></div></div>
 			<div class="row">
-			<p id="ryjce">temacik dla: <img height='100px' src='img/kto.png' class='shadowed'/></p>
-			</div>
-			<div class="row">
-			<button type="button" onclick="losu_start()">losuj</button>
+			<button type="button" onclick="losu_start()">generuj</button>
 				</div>
 				<div class="row">
 				<div class="progressbar six columns" id="myProgress1">
@@ -63,7 +60,7 @@
 				</div>
 			</div>
 			<p id="progress">
-			  czekanko - kliknij 'losuj' 
+			  kliknij 'generuj' 
 			</p>
 			<div>
 				<button title="Podgląd" type="button" onclick="preview()" class="btn-foo"><i class="fas fa-search"></i></button>
