--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 	<meta property="og:url" content="https://losulosu.pl/" />
 	<meta property="og:image" content="https://losulosu.pl/icon.png" />
 	<meta property="og:description" content="losowanko zapraszam dzyn dzyn dzyn" />
-	<meta name="theme-color" content="#A80000">
-	<meta name="msapplication-navbutton-color" content="#A80000">
-	<meta name="apple-mobile-web-app-status-bar-style" content="#A80000">
+	<meta name="theme-color" content="#E883D5">
+	<meta name="msapplication-navbutton-color" content="#E883D5">
+	<meta name="apple-mobile-web-app-status-bar-style" content="#E883D5">
     <link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/main.css">
