--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<div class="row">
 			<div class="wrapper" id="machine">
 			<div id="screen">
-			<p class="header">losowanie</p>
+			<p class="header">generator norwegow</p>
 			<div class="row">
 			<div class="one-third column box"><div id="b1"></div></div>
 			<div class="one-third column box"><div id="b2"></div></div>
@@ -49,21 +49,21 @@
 			<p id="ryjce">temacik dla: <img height='100px' src='img/kto.png' class='shadowed'/></p>
 			</div>
 			<div class="row">
-			<button type="button" onclick="losu_start()">losuj</button>
+			<button type="button" onclick="losu_start()">generuj</button>
 				</div>
 				<div class="row">
-				<div class="progressbar six columns" id="myProgress1">
+				<div class="progressbar four columns" id="myProgress1">
 				  <div class="progressbar-content" id="p1"></div>
 				</div>
-				<div class="progressbar three columns" id="myProgress2">
+				<div class="progressbar four columns" id="myProgress2">
 				  <div class="progressbar-content" id="p2"></div>
 				</div>
-				<div class="progressbar three columns" id="myProgress3">
+				<div class="progressbar four columns" id="myProgress3">
 				  <div class="progressbar-content" id="p3"></div>
 				</div>
 			</div>
 			<p id="progress">
-			  czekanko - kliknij 'losuj' 
+			  kliknij 'generuj' 
 			</p>
 			<div>
 				<button title="Podgląd" type="button" onclick="preview()" class="btn-foo"><i class="fas fa-search"></i></button>
