--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 	<meta property="og:url" content="https://losulosu.pl/" />
 	<meta property="og:image" content="https://losulosu.pl/icon.png" />
 	<meta property="og:description" content="losowanko zapraszam dzyn dzyn dzyn" />
-	<meta name="theme-color" content="#E883D5">
-	<meta name="msapplication-navbutton-color" content="#E883D5">
-	<meta name="apple-mobile-web-app-status-bar-style" content="#E883D5">
+	<meta name="theme-color" content="#A80000">
+	<meta name="msapplication-navbutton-color" content="#A80000">
+	<meta name="apple-mobile-web-app-status-bar-style" content="#A80000">
     <link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/main.css">
@@ -40,7 +40,7 @@
 	<div class="row">
 			<div class="wrapper" id="machine">
 			<div id="screen">
-			<p class="header">generator norwegow</p>
+			<p class="header">losowanie</p>
 			<div class="row">
 			<div class="one-third column box"><div id="b1"></div></div>
 			<div class="one-third column box"><div id="b2"></div></div>
@@ -49,21 +49,21 @@
 			<p id="ryjce">temacik dla: <img height='100px' src='img/kto.png' class='shadowed'/></p>
 			</div>
 			<div class="row">
-			<button type="button" onclick="losu_start()">generuj</button>
+			<button type="button" onclick="losu_start()">losuj</button>
 				</div>
 				<div class="row">
-				<div class="progressbar four columns" id="myProgress1">
+				<div class="progressbar six columns" id="myProgress1">
 				  <div class="progressbar-content" id="p1"></div>
 				</div>
-				<div class="progressbar four columns" id="myProgress2">
+				<div class="progressbar three columns" id="myProgress2">
 				  <div class="progressbar-content" id="p2"></div>
 				</div>
-				<div class="progressbar four columns" id="myProgress3">
+				<div class="progressbar three columns" id="myProgress3">
 				  <div class="progressbar-content" id="p3"></div>
 				</div>
 			</div>
 			<p id="progress">
-			  kliknij 'generuj' 
+			  czekanko - kliknij 'losuj' 
 			</p>
 			<div>
 				<button title="Podgląd" type="button" onclick="preview()" class="btn-foo"><i class="fas fa-search"></i></button>
